--- a/updatesite/license.html
+++ b/updatesite/license.html
@@ -63,14 +63,26 @@
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                  <li class="expanded">
+                                                                                                                                                                                          <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
+                      <li class="none">
+                          <a href="project-summary.html" title="Project Summary">Project Summary</a>
+            </li>
                       <li class="none">
             <strong>Project License</strong>
           </li>
                       <li class="none">
                           <a href="source-repository.html" title="Source Repository">Source Repository</a>
+            </li>
+                      <li class="none">
+                          <a href="integration.html" title="Continuous Integration">Continuous Integration</a>
+            </li>
+                      <li class="none">
+                          <a href="issue-tracking.html" title="Issue Tracking">Issue Tracking</a>
+            </li>
+                      <li class="none">
+                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
             </li>
                       <li class="none">
                           <a href="team-list.html" title="Project Team">Project Team</a>
@@ -116,7 +128,7 @@
   <label class="element-invisible" for="edit-search-block-form--2">Search </label>
  <input title="Enter the terms you wish to search for." type="text" id="edit-search-block-form--2" name="search_block_form" value="" size="15" maxlength="128" class="form-text" />
 </div>
-<div class="form-actions form-wrapper" id="edit-actions"><input type="submit" id="edit-submit" name="op" value="Search" class="form-submit" /></div><input type="hidden" name="form_build_id" value="form-l_RWuzjC0PIoBJIy4G7ucacMNKwpbesY5y1lXW__myY" />
+<div class="form-actions form-wrapper" id="edit-actions"><input type="submit" id="edit-submit" name="op" value="Search" class="form-submit" /></div><input type="hidden" name="form_build_id" value="form-9bU6vCjNLsb4v8O39LHuSwJMV08vplO-MCfJrOC_nL0" />
 <input type="hidden" name="form_id" value="search_block_form" />
 </div>
 </div></form>  </div>
