--- a/updatesite/source-repository.html
+++ b/updatesite/source-repository.html
@@ -63,15 +63,27 @@
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                  <li class="expanded">
+                                                                                                                                                                                          <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
+                      <li class="none">
+                          <a href="project-summary.html" title="Project Summary">Project Summary</a>
+            </li>
                       <li class="none">
                           <a href="license.html" title="Project License">Project License</a>
             </li>
                       <li class="none">
             <strong>Source Repository</strong>
           </li>
+                      <li class="none">
+                          <a href="integration.html" title="Continuous Integration">Continuous Integration</a>
+            </li>
+                      <li class="none">
+                          <a href="issue-tracking.html" title="Issue Tracking">Issue Tracking</a>
+            </li>
+                      <li class="none">
+                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
+            </li>
                       <li class="none">
                           <a href="team-list.html" title="Project Team">Project Team</a>
             </li>
