--- a/distribution-management.html
+++ b/distribution-management.html
@@ -89,9 +89,6 @@
             </li>
               </ul>
         </li>
-                                                                                      <li class="collapsed">
-                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
-                  </li>
           </ul>
                                                                                                                    <a href="http://maven.apache.org/" title="Maven" class="poweredBy">
         <img class="poweredBy"  alt="Maven" src="http://maven.apache.org/images/logos/maven-feather.png"    />
@@ -102,7 +99,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>The following is the distribution management information used by this project.</p><div class="section"><h3>Download URL<a name="Download_URL"></a></h3><a name="Download_URL"></a><a class="externalLink" href="https://github.com/FunThomas424242/github-maven-example/downloads">https://github.com/FunThomas424242/github-maven-example/downloads</a></div><div class="section"><h3>Repository - cloudbees-releases<a name="Repository_-_cloudbees-releases"></a></h3><a name="Repository_-_cloudbees-releases"></a><a class="externalLink" href="https://repository-funthomas424242.forge.cloudbees.com/release/">https://repository-funthomas424242.forge.cloudbees.com/release/</a></div><div class="section"><h3>Snapshot Repository - cloudbees-snapshots<a name="Snapshot_Repository_-_cloudbees-snapshots"></a></h3><a name="Snapshot_Repository_-_cloudbees-snapshots"></a><a class="externalLink" href="https://repository-funthomas424242.forge.cloudbees.com/snapshot/">https://repository-funthomas424242.forge.cloudbees.com/snapshot/</a></div><div class="section"><h3>Site - github<a name="Site_-_github"></a></h3><a name="Site_-_github"></a><a class="externalLink" href="http://github.com/FunThomas424242/github-maven-example/">http://github.com/FunThomas424242/github-maven-example/</a></div></div>
+        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>No distribution management is defined for this project.</p></div>
       </div>
     </div>
     <div class="clear">
