--- a/integration.html
+++ b/integration.html
@@ -89,9 +89,6 @@
             </li>
               </ul>
         </li>
-                                                                                      <li class="collapsed">
-                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
-                  </li>
           </ul>
                                                                                                                    <a href="http://maven.apache.org/" title="Maven" class="poweredBy">
         <img class="poweredBy"  alt="Maven" src="http://maven.apache.org/images/logos/maven-feather.png"    />
@@ -102,7 +99,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>This project uses <a class="externalLink" href="http://jenkins-ci.org/">Jenkins</a>.</p></div><div class="section"><h2>Access<a name="Access"></a></h2><a name="Access"></a><p>The following is a link to the continuous integration system used by the project.</p><div class="source"><pre><a class="externalLink" href="https://funthomas424242.ci.cloudbees.com/job/github%20maven%20example/">https://funthomas424242.ci.cloudbees.com/job/github%20maven%20example/</a></pre></div></div><div class="section"><h2>Notifiers<a name="Notifiers"></a></h2><a name="Notifiers"></a><p>No notifiers are defined. Please check back at a later date.</p></div>
+        <div class="section"><h2>Continuous Integration<a name="Continuous_Integration"></a></h2><a name="Continuous_Integration"></a><p>No continuous integration management system is defined. Please check back at a later date.</p></div>
       </div>
     </div>
     <div class="clear">
